--- a/Table.html
+++ b/Table.html
@@ -1,32 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
+    
+<!-- height="200" width="500" -->
+    <!-- <table border="5" bordercolor="red" cellspacing="10" cellpadding="10" align="center">
+        <tr>
+            <th>Roll</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Age</th>
+        </tr>
+        <tr align="center" bgcolor="yellow">
+            <td>1</td>
+            <td align="center" bgcolor="green">yash</td>
+            <td>yash@gmail.com</td>
+            <td>22</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>jaival</td>
+            <td>jaivalgmail.com</td>
+            <td>19</td>
+        </tr>
+    </table> -->
+
 
     <table border="">
         <tr>
-            <td rowspan="2"></td>
-            <td colspan="2">Average</td>
-            <td rowspan="2">Red Eyes</td>
+            <td height="50" width="100">content</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
         </tr>
         <tr>
-            <td>Height</td>
-            <td>weigth</td>
+            <td height="100" width="200">content</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
         </tr>
         <tr>
-            <td>Males</td>
-            <td>1.9</td>
-            <td>0.003</td>
-            <td>40%</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
+        </tr>
+        <tr>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
+        </tr>
+        <tr>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
+            <td>content</td>
         </tr>
     </table>
 
 </body>
-
 </html>
