--- a/Link.html
+++ b/Link.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/BMW.svg/768px-BMW.svg.png">
 </head>
 <body link="red" vlink="green" alink="yellow">
     
@@ -25,6 +26,10 @@
    <br><br>
 
    <a href="tel:+91 8723982734">63275923889</a>
+
+   <a href="">
+    <img src="" alt="">
+   </a>
     
 </body>
 </html>
