--- a/Marquee.html
+++ b/Marquee.html
@@ -17,6 +17,9 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCyObgt1gro-AmiTm0DRjDy0bJO6VXGr9hyg&s" height="200" width="200" alt="">
     </marquee> -->
 
+    <marquee behavior="" direction="">
+        <img src="narendramodi.jpg" height="200" width="200" alt="">
+    </marquee>
 
 </body>
 </html>
