--- a/Table.html
+++ b/Table.html
@@ -64,9 +64,15 @@
             <td>content</td>
             <td>content</td>
             <td>content</td>
-            <td>content</td>
+            <td><img src="" alt=""></td>
         </tr>
     </table>
 
 </body>
 </html>
+
+emid 
+emname 
+salary
+Email 
+age 
