--- a/Link.html
+++ b/Link.html
@@ -24,8 +24,19 @@
         <img src="https://static.vecteezy.com/system/resources/previews/014/018/561/non_2x/amazon-logo-on-transparent-background-free-vector.jpg" height="100" width="100" alt="">
     </a>
 
+<!-- 
+    amazon 
+    flipkat 
+    meesho 
+    mintra 
+    zomato 
+    swigy 
+    lenskart
+ -->
 
-    
+
+ <a href="https://www.flipkart.com/">Flipkart</a>
+
 
 
 </body>
