--- a/Link.html
+++ b/Link.html
@@ -8,34 +8,30 @@
 <body>
     
     
-    <a href="C_language.html">Click me</a>
+    <a href="https://www.google.in">Google</a><br><br>
 
-    <br><br>
-    <a href="https://www.google.com">Google</a>
-
-    <br><br>
-
-    <a href="Marquee.html" target="blank">Click me</a>
+    <a href="https://www.amazon.in/">Amazon</a> <br><br>
 
 
-    <br><br>
+    <!-- <a href="Cafe.html" target="_blank">Click me</a> -->
+    <a href="Cafe.html" target="blank">Click me</a> <br><br>
 
-    <a href="https://amazon.in">
-        <img src="https://static.vecteezy.com/system/resources/previews/014/018/561/non_2x/amazon-logo-on-transparent-background-free-vector.jpg" height="100" width="100" alt="">
+    <a href="bird.jpg">image</a> <br><br>
+
+    <a href="song.mp3">Song</a><br><br>
+
+
+    song : <a href="song.mp3" download="rihaan">Downloads</a><br><br>
+
+
+    <a href="mailto:rihaan@gmail.com">aashiqsingh@gmail.com</a><br><br>
+
+    <a href="tel:+91 87987498">783294876</a>
+
+
+    <a href="https://www.flipkart.com/" target="_blank">
+        <img src="https://seeklogo.com/images/F/flipkart-logo-C9E637A758-seeklogo.com.png" height="100" width="100" alt="">
     </a>
-
-<!-- 
-    amazon 
-    flipkat 
-    meesho 
-    mintra 
-    zomato 
-    swigy 
-    lenskart
- -->
-
-
- <a href="https://www.flipkart.com/">Flipkart</a>
 
 
 
