--- a/Marquee.html
+++ b/Marquee.html
@@ -7,19 +7,18 @@
 </head>
 <body>
     
-    <!-- behaviour : scroll , slide , alternate -->
-
-    <!-- <marquee behavior="scroll" scrollamount="100" direction="up" height="400"> 
-        <h1>Royal</h1>
-    </marquee> -->
-
-    <!-- <marquee behavior="" direction="" scrollamount="50">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCyObgt1gro-AmiTm0DRjDy0bJO6VXGr9hyg&s" height="200" width="200" alt="">
+<!-- direction="up" scrollamount="100" loop="5" -->
+ <!-- behaviour : scroll , slide , alternate -->
+    <!-- <marquee behavior="alternate" direction="left" scrollamount="40" height="300">
+        <!-- Royal technosft 
+         <h1>Royal technsoft</h1>
     </marquee> -->
 
     <marquee behavior="" direction="">
-        <img src="narendramodi.jpg" height="200" width="200" alt="">
+        <img src="independence-day-narendra-modi-1.avif" height="200" width="200" alt="">
     </marquee>
+
+
 
 </body>
 </html>
